--- a/Website/Lanc.css
+++ b/Website/Lanc.css
@@ -1,13 +1,11 @@
-/* Lanc.css */
-
 body {
     font-family: 'Arial', sans-serif;
     margin-left: 120px;
     margin-right: 500px;
     margin-block: 10px;
     line-height: 1.6;
-    background-color: #333333; /* Dark gray background */
-    color: #ffffff; /* White text color */
+    background-color: #333333; 
+    color: #ffffff; 
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -16,13 +14,13 @@ body {
 
 h1, h2, h3, h4, h5 {
     font-size: 28px;
-    color: #e74c3c; /* Red color for headings */
+    color: #e74c3c; 
     margin-bottom: 10px;
 }
 
 p {
     font-size: 16px;
-    color: #ffffff; /* White text color */
+    color: #ffffff; 
 }
 
 ul {
@@ -35,7 +33,7 @@ li {
 }
 
 a {
-    color: #e74c3c; /* Red color for links */
+    color: #e74c3c; 
     text-decoration: none;
 }
 
